diss: outlook: studies and apllications, and polishing everywhere

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -224,6 +224,7 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
   longauthor = {Frank P. A. Coolen and Matthias M. C. Troffaes and Thomas Augustin},
   author = {Frank Coolen and Matthias Troffaes and Thomas Augustin},
   title = {Imprecise Probability},
+  pages = {645--648},
   editor = {Lovric, Miodrag},
   booktitle = {International Encyclopedia of Statistical Science},
   year = {2011},
@@ -235,6 +236,7 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
   longauthor = {Jan Hannig and Hari Yver and Thomas C. M. Lee},
   author = {Jan Hannig and Hari Yver and Thomas Lee},
   title = {Fiducial Inference},
+  pages = {515--519},
   editor = {Lovric, Miodrag},
   booktitle = {International Encyclopedia of Statistical Science},
   year = {2011},
@@ -246,6 +248,18 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
   longauthor = {Frank P. A. Coolen},
   author = {Frank Coolen},
   title = {Nonparametric Predictive Inference},
+  pages = {968--970},
+  editor = {Lovric, Miodrag},
+  booktitle = {International Encyclopedia of Statistical Science},
+  year = {2011},
+  address={Berlin},
+  publisher={Springer},
+}
+
+@inreference{2011:IESS-surveillance,
+  author = {Marianne Fris\'en},
+  title = {Surveillance},
+  pages = {1577--1579},
   editor = {Lovric, Miodrag},
   booktitle = {International Encyclopedia of Statistical Science},
   year = {2011},
@@ -619,3 +633,13 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   school = {Department of Statistics, LMU Munich},
 }
 
+@inproceedings{2011:utkin,
+  title={Interval-valued regression and classification models in the framework of machine learning},
+  author={Utkin, Lev and Coolen, Frank},
+  booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise Probability: Theories and Applications},
+  editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
+  pages={371--380},
+  year={2011},
+  address = {Innsbruck},
+  publisher = {SIPTA}
+}
