--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -1070,7 +1070,7 @@ may express naturally that the accumulating information is non-conflicting and s
 
 We will briefly discuss here some critiques on imprecise probability methods,
 and touch on hierarchical models as an alternative.
-Other models based on sets of prior distributions will be discussed in Section~\ref{sec:alternatives}.***
+Other models based on sets of prior distributions will instead be discussed in Section~\ref{sec:alternatives}.
 
 \subsubsection{Objections to Imprecise Probability Models}
 \label{sec:objections}
