--- a/jstp.tex
+++ b/jstp.tex
@@ -1143,7 +1143,7 @@ tend the more to the sample mean the larger the sample gets.
 
 ***change it or leave it? draw links to other chapters and sections?***
 
-In this ***paper***, we considered generalised Bayesian inference
+In this work, we considered generalised Bayesian inference
 in a wide class of imprecise probability models. We first
 demonstrated that, in their originally proposed form, these models
 do not react to prior-data conflict and so do not utilise
