--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -487,8 +487,7 @@
 @INPROCEEDINGS{2011:4:isipta,
   author = {Antonucci, A. and Cattaneo, M. and Corani, G.},
   title = {Likelihood-Based Naive Credal Classifier},
-  booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on
-    Imprecise Probability: Theories and Applications},
+  booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise Probability: Theories and Applications},
   year = {2011},
   editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
   pages = {21--30},
